# verilator

./: .gitignore  README.md
counter-sysc/: compile.sh  design.cpp  testbench.cpp
examples-verilator-install/cmake_hello_sc/: Makefile
examples-verilator-install/cmake_protect_lib/: Makefile
examples-verilator-install/cmake_tracing_c/: Makefile
examples-verilator-install/cmake_tracing_c/logs/annotated/: sub.v  top.v
examples-verilator-install/cmake_tracing_sc/: Makefile
examples-verilator-install/cmake_tracing_sc/logs/annotated/: top.v
examples-verilator-install/make_protect_lib/obj_dir_secret/: Vsecret_impl.cpp  Vsecret_impl.h  Vsecret_impl.mk  Vsecret_impl_PSfnzb.cpp  Vsecret_impl_PSfnzb.h  Vsecret_impl__ALLcls.cpp  Vsecret_impl__ALLcls.d  Vsecret_impl__ALLsup.cpp  Vsecret_impl__ALLsup.d  Vsecret_impl__idmap.xml  Vsecret_impl__ver.d  Vsecret_impl_classes.mk  libverilated_secret.d  verilated.d  verilated_secret.cpp  verilated_secret.d  verilated_secret.sv
fifo/: CMakeLists.txt  Makefile  testbench.sv
fifo/logs/annotated/: fifo.sv
fifo/src/: Stimulus.cpp  Stimulus.h  fifo.sv  sc_main.cpp
hello_world_c++/: our.v  sim_main.cpp
sram-multi-counter/: CMakeLists.txt  Makefile  input.vc  testbench.sv
sram-multi-counter/src/: Stimulus.cpp  Stimulus.h  design.sv  dpsram.sv  main.cpp  op_xaction.h  sc_main.cpp  sram_multi_counter.sv
try/make_tracing_c/: top.v
try/make_tracing_c/logs/annotated/: sub.v  top.v
try/systemc/make_tracing_sc/logs/annotated/: sub.v
